--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">JermarHosting</a>
+          <a class="navbar-brand" href="index.html">Jermar Belen</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -77,6 +77,7 @@
           <p>Hi my name is Jermar Belen, i am a software developer and a premiere provider of online technology based programs, softwares and other IT related services. Please follow the link below to see the projects i have worked on over the years:
             <ul>
               <li><a href="http://203.160.181.242:84">Portfolio</a></li>
+              <li><a href="https://jermarbelen.github.io/">Github</a></li>
               <li><a href="https://jermarbelen.business.site" target="_blank">Bussiness Website</a></li>
             </ul>
           </p>
