--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <p>Hi my name is Jermar Belen, i am a software developer and a premiere provider of online technology based programs, softwares and other IT related services. Please follow the link below to see the projects i have worked on over the years:
             <ul>
               <li><a href="http://203.160.181.242:84">Portfolio</a></li>
-              <li><a href="https://jermarbelen.github.io/">Github</a></li>
+              <li><a href="https://github.com/jermarbelen">Github</a></li>
               <li><a href="https://jermarbelen.business.site" target="_blank">Bussiness Website</a></li>
             </ul>
           </p>
