--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
             <img src="img/28-Create Add Form part2.jpg" width="730px" height="500px" title="click to zoom">
             <p align="center" style="padding-bottom: 50px;margin: 20px;" title="click to zoom"><strong>Figure 28 - Create Add Form part2</strong></p>
           </a>
+          
+          <p>After this, you can preview your system on your web browser. Just type http://localhost/sample</p>
 
            <hr>
         </div>
