--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="php, mysql, tutorial, adobe, dreamweaver, software, programming, web, html, css">
     <meta name="author" content="">
 
     <title>Jermar Belen | Software Developer</title>
