--- a/about.html
+++ b/about.html
@@ -81,7 +81,8 @@
               <li><a href="https://jermarbelen.business.site" target="_blank">Bussiness Website</a></li>
             </ul>
           </p>
-          <p></p>
+        
+          <p><img src="img/programmer2.gif" width="730px"></p>
 
           <hr>
 
