--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p>This blog template was created by and is maintained by <a href="https://github.com/earlbread">Seunghun Lee</a></p>
+            <span>This template was created by and is maintained by <a href="https://github.com/earlbread" target="_blank">Seunghun Lee</a>. Some images from <a href="https://github.com/rudrabarad" target="_blank">Rudra Barad</a></span>
           </div>
           <!-- /.col-lg-12 -->
         </div>
