--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <p align="center" style="padding-bottom: 50px;margin: 20px;" title="click to zoom"><strong>Figure 28 - Create Add Form part2</strong></p>
           </a>
           
-          <p>After this, you can preview your system on your web browser. Just type http://localhost/sample</p>
+          <p>After saving your project (CTRL + S), you can preview your system on your web browser. Just type http://localhost/sample</p>
 
            <hr>
         </div>
