--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="php, mysql, tutorial, adobe, dreamweaver, software, programming, web, html, css">
     <meta name="author" content="">
 
-    <title>Php Tutorial</title>
+    <title>Php MySQL Tutorial</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
