--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <img class="media-object" src="img/Profile1.png" alt="" width="64px">
             </a>
             <div class="media-body">
-              <h4 class="media-heading">Jermar
+              <h4 class="media-heading">User
                 <small>November 20, 2008 at 9:30 PM</small>
               </h4>
               Download links:
