--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
           </a>
           
           <p>After saving your project (CTRL + S), you can preview your system on your web browser. Just type http://localhost/sample</p>
+          
+          <em>*This guide is only for personal use or getting your feet wet on prgramming. This is, by no means, the reccomended way of making industry standard information systems or website. To learn more visit <a href="https://www.w3schools.com/html/html_tables.asp">w3schools</a>. Thank you</em>
 
            <hr>
         </div>
