--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
           <hr>
           
-          <p>Hi, this is a simple and beginner friendly introduction on software development, even with no knowlede on coding or html. I hope this would help someone spark interest in programming.</p>
+          <p>Hi, this is a simple and beginner friendly introduction on software development, even without prior knowledge on programming or html. I hope this would help someone spark interest in programming.</p>
           <br/>
           
           <a href="img/1-Extract XAMPP.jpg" target="_blank"> 
