--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="about.html">About</a>
             </li>
             <li>
-              <a href="index.html">Blog</a>
+              <a href="https://27.110.165.6:6969/wordpress">Blog</a>
             </li>
             <li>
               <a href="javascript:history.back(-1)"> Back </a>
