--- a/about.html
+++ b/about.html
@@ -45,12 +45,6 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="index.html">Blog</a>
-            </li>
-            <li>
               <a href="javascript:history.back(-1)"> Back </a>
             </li>
           </ul>
@@ -76,9 +70,8 @@
           <!-- Post Content -->
           <p>Hi my name is Jermar Belen, i am a software developer and a provider of online technology based programs, softwares and other IT related services. Please follow the link below to see the projects i have worked on over the years:
             <ul>
-              <li><a href="http://203.160.181.242:84">Portfolio</a></li>
+              <li><a href="https://27.110.165.6:9229">Portfolio</a></li>
               <li><a href="https://github.com/jermarbelen" target="_blank">Github</a></li>
-              <li><a href="https://jermarbelen.business.site" target="_blank">Bussiness Website</a></li>
             </ul>
           </p>
         
